<resources>
    <string name="find_student">Find Student</string>
    <string name="pick_date">Pick Date</string>
    <string name="show_attendance">Show Attendance</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="attended_student">ATTENDED STUDENT</string>
    <string name="total_student">TOTAL STUDENT</string>
    <string name="attendance_percentage">ATTENDANCE PERCENTAGE</string>
    <string name="attended_teacher">ATTENDED TEACHER</string>
    <string name="total_absent">TOTAL ABSENT</string>
    <string name="total_teacher">TOTAL TEACHER</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="show">Show</string>
    <string name="particulars">Particulars</string>
    <string name="debit_amount">Debit Amount</string>
    <string name="name_and_roll">Name and Roll</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="leave">Leave</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="communication_details">Communication details</string>
    <string name="referred_documents">Referred Documents</string>
    <string name="proceed">Proceed</string>
    <string name="communication_date">Communication date</string>
    <string name="is_next_meeting_fixed">Is next meeting fixed ?</string>
    <string name="yes">yes</string>
    <string name="next_meeting_date">Next meeting date</string>
    <string name="empty_list">Empty List</string>
    <string name="entry_work_order">Entry Work Order</string>
    <string name="priority">Priority:</string>
    <string name="medium">Medium:</string>
    <string name="next_meeting_date1">Next meeting date:</string>
    <string name="institute">Institute</string>
    <string name="institute_contact_person">Institute contact person</string>
    <string name="institute_contact_no">Institute contact No.</string>
    <string name="no_of_students">No. of students</string>
    <string name="no_of_teachers">No. of teachers</string>
    <string name="institute_address">Institute address</string>
    <string name="comment">Comment</string>
    <string name="visiting_card">Visiting Card</string>
    <string name="student">Student:</string>
    <string name="teacher">Teacher:</string>
    <string name="type">Type:</string>
    <string name="work_order_date">Work order date</string>
    <string name="installment_start_date">Installment start date</string>
    <string name="work_order_no">Work Order No.</string>
    <string name="work_order_value">Work Order Value</string>
    <string name="no_of_installment">No. of Installment</string>
    <string name="sales_person">Sales Person</string>
    <string name="notice">Notice</string>
    <string name="routine">Routine</string>
    <string name="attendance">Attendance</string>
    <string name="syllabus">Syllabus</string>
    <string name="homework">Homework</string>
    <string name="result">Result</string>
    <string name="exam">Exam</string>
    <string name="fees">Fees</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="change_user_type">Change User Type</string>
    <string name="icard">iCard</string>
    <string name="show_routine">Show Routine</string>
    <string name="mcq">MCQ</string>
    <string name="written">WRITTEN</string>
    <string name="practical">PRACTICAL</string>
    <string name="attendance1">ATTENDANCE</string>
    <string name="total">TOTAL</string>
    <string name="absent1">ABSENT</string>
    <string name="save">Save</string>
    <string name="entry_marks">Entry Marks</string>
    <string name="roll">ROLL</string>
    <string name="name">NAME</string>
    <string name="show_report">Show Report</string>
    <string name="previous_balance">Previous Balance:</string>
    <string name="due_amount">Due Amount:</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="balance">Balance:</string>
    <string name="total_amount">Total Amount</string>
    <string name="_50000_tk">50000 TK</string>
    <string name="payment_type">Payment Type:</string>
    <string name="select">Select</string>
    <string name="total_payment">Total Payment:</string>
    <string name="payment">Payment</string>
    <string name="classs">Class:</string>
    <string name="dept">Dept:</string>
    <string name="section">Section:</string>
    <string name="total_student1">Total Student:</string>
    <string name="select_year">Select Year</string>
    <string name="enter_your_email_phone_or_username">Enter your email, phone or username</string>
    <string name="next">Next</string>
    <string name="password_reset_method">How do you want to receive the code to reset password?</string>
    <string name="invalid_email_found">Invalid email found</string>
    <string name="invalid_phone_found">Invalid phone found</string>
    <string name="i_don_t_have_any_of_this">I don\'t have any of this</string>
    <string name="enter_verification">Enter verification code you received</string>
    <string name="resend_code">Resend code</string>
    <string name="select_student">Select Student</string>
    <string name="topic">Topic:</string>
    <string name="details">Details:</string>
    <string name="homework_digital_content_not_found">Homework digital content not found</string>
    <string name="no_homework_found">No homework found</string>
    <string name="homework_digital_content">Homework digital content:</string>
    <string name="select_homework">Select homework:</string>
    <string name="edit">Edit</string>
    <string name="new_entry">New Entry</string>
    <string name="show_details">Show Details</string>
    <string name="open_camera">Open Camera</string>
    <string name="crop_image">Crop Image</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="control_brightness">Control Brightness:</string>
    <string name="name1">Name:</string>
    <string name="roll_no">Roll No:</string>
    <string name="student_no">Student No:</string>
    <string name="rfid">RFID:</string>
    <string name="shift">Shift:</string>
    <string name="department">Department:</string>
    <string name="branch">Branch:</string>
    <string name="session">Session:</string>
    <string name="board">Board:</string>
    <string name="email">Email:</string>
    <string name="contact_no">Contact No:</string>
    <string name="remarks">Remarks:</string>
    <string name="guardian_name">Guardian Name:</string>
    <string name="guardian_phone">Guardian phone:</string>
    <string name="guardian_email">Guardian Email:</string>
    <string name="birthday">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="religion">Religion:</string>
    <string name="address">Address:</string>
    <string name="update_photo">Update Photo</string>
    <string name="blood_group">Blood Group:</string>
    <string name="date">Date</string>
    <string name="phone">Phone:</string>
    <string name="update_information">Update Information</string>
    <string name="guardian">Guardian:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="entry_student">Entry Student</string>
    <string name="digital_content_not_found">Digital content not found</string>
    <string name="lesson_plan_not_found">Lesson plan not found</string>
    <string name="lesson_plan_digital_content">Lesson plan digital content:</string>
    <string name="select_lesson_plan">Select lesson plan:</string>
    <string name="digital_content">Digital content:</string>
    <string name="show_lesson_plan">Show lesson plan</string>
    <string name="previous_due_advance">Previous Due/Advance</string>
    <string name="_5000">$5000</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="_0_tk">0 TK</string>
    <string name="total_payment1">Total Payment</string>
    <string name="balance1">Balance</string>
    <string name="ok">OK</string>
    <string name="_0">0</string>
    <string name="delete1">DELETE</string>
    <string name="delete">DELETE</string>
    <string name="m">M</string>
    <string name="details_marks">Details Marks</string>
    <string name="mcq1">MCQ:</string>
    <string name="written1">Written:</string>
    <string name="show_student_list">Show student list</string>
    <string name="show_result">Show Result</string>
    <string name="attendance2">Attendance:</string>
    <string name="practical1">Practical:</string>
    <string name="total1">Total:</string>
    <string name="grade">Grade</string>
    <string name="gpa">GPA</string>
    <string name="mark_range">Mark Range</string>
    <string name="select_medium">Select Medium</string>
    <string name="select_class">Select Class</string>
    <string name="subject">Subject</string>
    <string name="mark">Mark</string>
    <string name="grade_point">Grade Point</string>
    <string name="copyright">Copyright © 2019, onAir International Ltd.</string>
    <string name="select_exam">Select Exam</string>
    <string name="select_date">Select Date</string>
    <string name="no_syllabus_digital_content_found">No syllabus digital content found</string>
    <string name="no_lesson_digital_content_found">No lesson digital content found</string>
    <string name="syllabus_digital_content">Syllabus digital content:</string>
    <string name="lesson_digital_content">Lesson digital content:</string>
    <string name="show_syllabus">Show Syllabus</string>
    <string name="update">Update</string>
    <string name="none">NONE</string>
    <string name="select_user_type">Select User Type</string>
    <string name="super_admin">Super Admin</string>
    <string name="admin">Institute Admin</string>
    <string name="student1">Student</string>
    <string name="staff">Staff</string>
    <string name="guardian1">Guardian</string>
    <string name="breakk">Break</string>
    <string name="select_shift">Select Shift</string>
    <string name="select_subject">Select Subject</string>
    <string name="teacher1">Teacher</string>
    <string name="syllabus_not_found">Syllabus not found</string>
</resources>
