<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#123c75">

        <TextView
            android:id="@+id/teacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="#123c75"
            android:padding="5dp"
            android:text="@string/name_and_roll"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/present"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/absent"
            android:background="#123c75"
            android:padding="5dp"
            android:text="@string/present"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_toLeftOf="@id/absent" />

        <TextView
            android:id="@+id/absent"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/late"
            android:layout_toStartOf="@id/late"
            android:background="#123c75"
            android:padding="5dp"
            android:text="@string/absent"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/late"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/leave"
            android:background="#123c75"
            android:padding="5dp"
            android:text="@string/late"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_toLeftOf="@id/leave" />

        <TextView
            android:id="@+id/leave"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#123c75"
            android:padding="5dp"
            android:text="@string/leave"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical" />
</LinearLayout>