<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#ffffff"
    app:cardElevation="5dp"
    app:cardCornerRadius="3dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/password_reset_method"
            android:textColor="#174b92"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email_found"
                android:textColor="#174b92"
                android:checked="false"
                android:textSize="16sp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"/>

            <RadioButton
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_phone_found"
                android:textColor="#174b92"
                android:checked="false"
                android:textSize="16sp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"/>
            <RadioButton
                android:id="@+id/dont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_don_t_have_any_of_this"
                android:textColor="#174b92"
                android:checked="false"
                android:textSize="16sp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/next"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:layout_below="@id/radioGroup"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:textColor="#ffffff"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/cross"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cross_button_black"
            android:drawableStart="@drawable/ic_clear_black"
            android:drawableLeft="@drawable/ic_clear_black"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>