<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/upperConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#2980b9"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:text="@string/subject"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/mark"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:text="@string/mark"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/grade"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:text="@string/grade"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/comment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:text="@string/grade_point"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/labels"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/selectExam"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_arrow_up"
        android:tint="#ffffff"
        android:scaleType="center"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp" />

</RelativeLayout>
