<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp">

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_below="@id/noticeTitle"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="#505050"
            app:layout_constraintBottom_toTopOf="@+id/label1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sectionLabel" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/previous_balance"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sectionLabel"
            app:layout_constraintTop_toBottomOf="@+id/sectionLabel"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/previousBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label1"
            app:layout_constraintTop_toTopOf="@+id/label1" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="90dp"
            android:text="@string/due_amount"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label1"
            app:layout_constraintTop_toTopOf="@+id/previousBalance"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="90dp" />

        <TextView
            android:id="@+id/dueAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label2"
            app:layout_constraintTop_toTopOf="@+id/label2" />

        <TextView
            android:id="@+id/label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/paid_amount"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label1"
            app:layout_constraintTop_toBottomOf="@+id/label1"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/paidAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/previousBalance"
            app:layout_constraintTop_toTopOf="@+id/label3"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/balance"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label2"
            app:layout_constraintTop_toTopOf="@+id/paidAmount"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/dueAmount"
            app:layout_constraintTop_toTopOf="@+id/label4"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/mediumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/medium"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/mediumLabel"
            app:layout_constraintTop_toTopOf="@+id/mediumLabel"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/classLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/classs"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/medium"
            app:layout_constraintTop_toTopOf="@+id/medium"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/classs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/classLabel"
            app:layout_constraintTop_toTopOf="@+id/classLabel"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/deptLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dept"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/classs"
            app:layout_constraintTop_toTopOf="@+id/classs"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/deptLabel"
            app:layout_constraintTop_toTopOf="@+id/deptLabel"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/sectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mediumLabel"
            app:layout_constraintTop_toBottomOf="@+id/mediumLabel" />

        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/sectionLabel"
            app:layout_constraintTop_toBottomOf="@+id/mediumLabel"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/totalStudentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_student1"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/section"
            app:layout_constraintTop_toBottomOf="@+id/mediumLabel"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/totalStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/totalStudentLabel"
            app:layout_constraintTop_toTopOf="@+id/totalStudentLabel" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>